@@ -3,7 +3,6 @@ package uk.gov.companieshouse.disqualifiedofficers.delta.transformer;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import uk.gov.companieshouse.api.delta.DisqualificationDelta;
@@ -41,7 +40,7 @@ public class DisqualifiedOfficersApiTransformer {
     */
     public InternalNaturalDisqualificationApi transformNaturalDisqualification(
             DisqualificationDelta disqualificationDelta) {
-        DisqualificationOfficer officer = disqualificationDelta.getDisqualifiedOfficer().get(0);
+        DisqualificationOfficer officer = disqualificationDelta.getDisqualifiedOfficer().getFirst();
         InternalNaturalDisqualificationApi apiObject = naturalMapper
                         .disqualificationDeltaToApi(officer);
         return parseNaturalDeltaAt(apiObject, disqualificationDelta);
@@ -54,7 +53,7 @@ public class DisqualifiedOfficersApiTransformer {
     */
     public InternalCorporateDisqualificationApi transformCorporateDisqualification(
             DisqualificationDelta disqualificationDelta) {
-        DisqualificationOfficer officer = disqualificationDelta.getDisqualifiedOfficer().get(0);
+        DisqualificationOfficer officer = disqualificationDelta.getDisqualifiedOfficer().getFirst();
         InternalCorporateDisqualificationApi abiObject = corporateMapper
                         .disqualificationDeltaToApi(officer);
         return parseCorporateDeltaAt(abiObject, disqualificationDelta);
